[package]
name = "DataLoader"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
serde_json = "1.0.142"
chrono = "0.4.41"
polars = { version = "0.50.0", default-features = false, features = ["lazy", "temporal", "dtype-datetime", "dynamic_group_by","fmt", "polars-io"] }